Make sure shadow doesn't overflow...

--- a/resources/assets/scss/modules/offcanvas-drawer.scss
+++ b/resources/assets/scss/modules/offcanvas-drawer.scss
@@ -24,7 +24,7 @@
 	height: 100vh;
 	background: #fff;
 	box-shadow: rgba(0, 0, 0, 0.3) 0 0 10px;
-	transform: translate3d(-100%, 0, 0);
+	transform: translate3d(-110%, 0, 0);
 	transition: transform 0.25s ease-in-out;
 	z-index: 100001;
 	will-change: transform;
